        font-size:0.8em; 
        margin-bottom:1em; 
        text-align:center }
    div.freetext { color:#f0f0f0 }
    div.list     { color:#7070f0 }
  </style>
</head>
<body>

$ 1.1.0
  % 1.1.0 (Struttin' Evil Mushroom)
  _ August 24, 2012
    ! A lot of new features in this update (be sure to check out the settings!):
    * Auto background cycling option (when hidden, intervals, and never)
    * Render framerate cap option (5-60 FPS in 5 step increments)
    * Output scaling options (exact fit with smoothing and best fit with cropping)
    ! Additionally, some internal changes to support the above:
    * New custom render update thread
    * Logic updates are now decoupled from render framerate
    * Minor logic update optimizations
    * Code cleanup in shader generator

$ 1.0.0
  % 1.0.0 (Struttin' Evil Mushroom)
  _ August 7, 2012
    * FINALLY. FIXED. COLOR CYCLING. Older phones have full effects now!
    * Fixed a terrible memory leak in the background selector

$ 0.10.1
  % 0.10.1 (Beautiful UFO)
  _ July 26, 2012
    * landscape orientation fixes: aspect ratio, scaling, and garbage at sides of screen (thank you for the report, Squishie!)

$ 0.10.0
  % 0.10.0 (Beautiful UFO)
  _ July 18, 2012
    * reorganized preference menus
    * created a <a href="https://play.google.com/store/apps/details?id=net.georgewhiteside.android.abstractartarabicaataraxis">donation version</a>
    * added author contact link
    * fixed a background scroll bug
    * incorporated Karsten Priegnitz's handy <a href="http://code.google.com/p/android-change-log/">ChangeLog</a> class

$ 0.9.3 (Criminal Caterpillar)
  % 0.9.3 (Criminal Caterpillar)
  _ July 10, 2012
    * FINALLY squashed the "backgrounds running at super speed" and "enemy sprite crash" bugs

$ 0.9.0 (Criminal Caterpillar)
  % 0.9.0 (Criminal Caterpillar)
  _ May 15, 2012
    * can now display enemy sprites
    * can now do letterboxing
    * fixed rendering aspect ratio