@@ -27,13 +27,14 @@ $ 1.1.0
   _ August 24, 2012
     ! A lot of new features in this update (be sure to check out the settings!):
     * Auto background cycling option (when hidden, intervals, and never)
+    * Background pan when swiping between homescreens (on supported launchers)
     * Render framerate cap option (5-60 FPS in 5 step increments)
+    * Frameskipping option (disabling this causes anything below 60fps to go slow-mo)
     * Output scaling options (exact fit with smoothing and best fit with cropping)
     ! Additionally, some internal changes to support the above:
     * New custom render update thread
     * Logic updates are now decoupled from render framerate
     * Minor logic update optimizations
-    * Code cleanup in shader generator
 
 $ 1.0.0
   % 1.0.0 (Struttin' Evil Mushroom)
